# Presenter

./: .gitattributes  .gitignore  angular.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: app.config.ts  app.routes.ts  app.ts
src/app/about/: about.dialog.service.ts  about.dialog.ts
src/app/launchpad/: launchpad.dialog.ts  launchpad.service.ts
src/app/scenes/: scene2.ts  scene3.ts  title.scene.ts
src/app/services/: env.service.ts  package.service.ts  scene.service.ts
src/app/widgets/: canvas.ts  frame.ts  layout.ts  nav.ts  splash.ts  title-bar.ts
src/esm/: sleep.ts
src/styles/: sg.css  soft-button.css
